# Feature-Selection-Optimization

./: .gitignore  README.md  markov_chain.py  monte_carlo_simulation.py
GA_&_feature_elimination/: .env.example  .gitignore  README.md  __init__.py  checkpoint_manager.py  feature_elimination.py  feature_eliminator.py  fitness_cache.py  genetic.py  (+3 more)
MCMC/: .env.example  .gitignore  README.md  __init__.py  data_prep.py  feature_eliminator.py  metropolis_hastings.py  pyproject.toml  requirements.txt  search_graph.py
RL/: README.md  pyproject.toml  requirements.txt
RL/results/reinforcement_learning/double_dqn/: config.json  network.pt
RL/results/reinforcement_learning/dqn/: config.json  network.pt
RL/results/reinforcement_learning/q_learning/: config.json
RL/src/: analyze_distribution.py  analyze_features.py  condition_predictor.py  data_loader.py  demo_condition_predictor.py  demo_pump_model.py  evaluate_by_pump.py  explore_data.py  train_condition_model.py
RL/src/agents/: __init__.py  dqn.py  q_learning.py  replay_buffer.py
RL/src/baselines/: __init__.py  base.py  fixed_interval.py  inspection_aware.py  run_to_failure.py  sensor_threshold.py
RL/src/environment/: __init__.py  actions.py  maintenance_env.py  operations.py  state_discretizer.py
RL/src/evaluation/: __init__.py  evaluate_policy.py
RL/src/simulation/: __init__.py  degradation.py  economics.py  pump_model.py
RL/src/training/: train_dqn.py  train_q_learning.py
RL/tests/: test_baselines.py  test_dqn.py  test_maintenance_env.py  test_operations.py  test_pump_model.py  test_state_discretizer.py
(+11 files in other folders)
